# ml-workflow

./: .gitignore  README.rst  dev_requirements.txt  pyproject.toml  setup.cfg  setup_template.sh  test_template.sh
.github/workflows/: test.yml
docs/source/: conf.py  index.rst  requirements.txt  workflow.functional.rst  workflow.ignite.decorators.rst  workflow.ignite.handlers.learning_rate.rst  workflow.ignite.handlers.rst  workflow.ignite.metrics.rst  workflow.ignite.rst  workflow.rst  workflow.torch.rst
template/{{cookiecutter.repository_name}}/: .gitignore  pyproject.toml
template/{{cookiecutter.repository_name}}/.github/workflows/: publish.yml  test.yml
template/{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/: metrics.py  train-context.py  train-nofunc.py  train.py
workflow/: __init__.py  early_stopping.py  progress_bar.py  setup_project.py
workflow/functional/: __init__.py  starcompose.py
workflow/ignite/: __init__.py
workflow/ignite/handlers/: __init__.py  metrics_logger.py  model_checkpoint.py  model_score.py
workflow/template/{{cookiecutter.repository_name}}/: README.rst  pyproject.toml  setup.cfg
workflow/template/{{cookiecutter.repository_name}}/.github/workflows/: test.yml
workflow/template/{{cookiecutter.repository_name}}/operations/: evaluate.py  search_lr.py  train.py
workflow/template/{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/: train.py
workflow/template/{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/datastream/: __init__.py  datasets.py
workflow/torch/: __init__.py  module_compose.py
