[metadata]
name = ml-workflow
author = "Aiwizo"
author-email = richard@aiwizo.com
summary = Pytorch project template and required tools
project_urls =
    Source Code = https://github.com/aiwizo/ml-workflow/
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords =
    pytorch
    ignite
    workflow
    utilities

[files]
packages =
    workflow
data_files = workflow/template = template/*

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[options]
python_requires = >=3.7
setup_requires =
    setuptools

[bdist_wheel]

[build_sphinx]
builders = html
source-dir = docs/source
build-dir = docs/build
all-files = 1
