[tool.poetry]
name = "{{cookiecutter.repository_name}}"
version = "{{cookiecutter.package_version}}"
description = "{{cookiecutter.package_description}}"
authors = ["Aiwizo AB"]

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=1.6.0"
numpy = ">=1.19.2"
torchvision = ">=0.7.0"
opencv-python = ">=4.4.0"
ml-workflow = ">=0.8.1"
pytorch-datastream = ">=0.3.6"

[tool.poetry.dev-dependencies]
guildai = ">=0.7.1.dev6"
data-kale = ">=0.1.3"
pylint = ">=2.6.0"
flake8 = ">=3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
