[tool.poetry]
name = "{{cookiecutter.repository_name}}"
version = "{{cookiecutter.package_version}}"
description = "{{cookiecutter.package_description}}"
authors = ["Aiwizo AB"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
numpy = "^1.19.2"
torchvision = "^0.8.1"
opencv-python = "^4.4.0"
ml-workflow = "^0.8.2"
pytorch-datastream = "^0.3.8"

[tool.poetry.dev-dependencies]
guildai = "0.7.1.dev6"
data-kale = "^0.1.3"
pylint = "^2.6.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
